[Tracking] refactor tracking bundle to be stand-alone available and also add tests for tracking

--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
     }
   ],
   "require": {
-    "coreshop/order-bundle": "^2.0",
     "coreshop/registry": "^2.0",
+    "coreshop/tracking": "^2.0",
     "pimcore/pimcore": "^5.4.0"
   },
   "config": {
