[Pimcore 11] begin with Pimcore 11 implementation

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -24,8 +24,8 @@ services:
     CoreShop\Bundle\TrackingBundle\Resolver\ConfigResolver:
         public: true
         arguments:
-            - '@Pimcore\Analytics\SiteId\SiteIdProvider'
-            - '@Pimcore\Analytics\Google\Config\ConfigProvider'
+            - '@Pimcore\Bundle\GoogleMarketingBundle\SiteId\SiteIdProvider'
+            - '@Pimcore\Bundle\GoogleMarketingBundle\Config\ConfigProvider'
 
     CoreShop\Bundle\TrackingBundle\Tracker\AbstractEcommerceTracker:
         abstract: true
@@ -40,7 +40,7 @@ services:
         arguments:
             - '@Pimcore\Http\Request\Resolver\PimcoreContextResolver'
             - '@Pimcore\Http\ResponseHelper'
-            - '@Pimcore\Analytics\SiteId\SiteIdProvider'
+            - '@Pimcore\Bundle\GoogleMarketingBundle\SiteId\SiteIdProvider'
             - '@CoreShop\Bundle\TrackingBundle\Tracker\Google\TagManager\CodeTracker'
         tags:
             - { name: kernel.event_listener, event: kernel.response, method: onKernelResponse, priority: -100 }
@@ -49,7 +49,7 @@ services:
         parent: CoreShop\Bundle\TrackingBundle\Tracker\AbstractEcommerceTracker
         public: true
         calls:
-            - [setTracker, ['@Pimcore\Analytics\Google\Tracker']]
+            - [setTracker, ['@Pimcore\Bundle\GoogleMarketingBundle\Tracker\Tracker']]
             - [setConfigResolver, ['@CoreShop\Bundle\TrackingBundle\Resolver\ConfigResolver']]
         tags:
             - { name: coreshop.tracking.tracker, type: google-analytics-enhanced-ecommerce }
@@ -58,7 +58,7 @@ services:
         parent: CoreShop\Bundle\TrackingBundle\Tracker\AbstractEcommerceTracker
         public: true
         calls:
-            - [setTracker, ['@Pimcore\Analytics\Google\Tracker']]
+            - [setTracker, ['@Pimcore\Bundle\GoogleMarketingBundle\Tracker\Tracker']]
             - [setConfigResolver, ['@CoreShop\Bundle\TrackingBundle\Resolver\ConfigResolver']]
         tags:
             - { name: coreshop.tracking.tracker, type: google-analytics-universal-ecommerce }
@@ -67,7 +67,7 @@ services:
         parent: CoreShop\Bundle\TrackingBundle\Tracker\AbstractEcommerceTracker
         public: true
         calls:
-            - [setTracker, ['@Pimcore\Analytics\Google\Tracker']]
+            - [setTracker, ['@Pimcore\Bundle\GoogleMarketingBundle\Tracker\Tracker']]
             - [setConfigResolver, ['@CoreShop\Bundle\TrackingBundle\Resolver\ConfigResolver']]
         tags:
             - { name: coreshop.tracking.tracker, type: google-gtag-enhanced-ecommerce }
