--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
     "coreshop/registry": "^3.0",
     "coreshop/tracking": "^3.0",
     "coreshop/pimcore-bundle": "^3.0",
-    "pimcore/pimcore": "^10.5"
+    "pimcore/pimcore": "^11.0",
+    "pimcore/google-marketing-bundle": "^1.0"
   },
   "require-dev": {
     "phpstan/phpstan": "^1.5.4",
