--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -63,6 +63,15 @@ services:
         tags:
             - { name: coreshop.tracking.tracker, type: google-analytics-4 }
 
+    CoreShop\Bundle\TrackingBundle\Tracker\Google\GA4TagManagerEcommerce:
+        parent: CoreShop\Bundle\TrackingBundle\Tracker\AbstractEcommerceTracker
+        public: true
+        calls:
+            - [setTracker, ['@Pimcore\Analytics\Google\Tracker']]
+            - [setConfigResolver, ['@CoreShop\Bundle\TrackingBundle\Resolver\ConfigResolver']]
+        tags:
+            - { name: coreshop.tracking.tracker, type: google-analytics-4-tag-manager }
+
     CoreShop\Bundle\TrackingBundle\Tracker\Google\UniversalEcommerce:
         parent: CoreShop\Bundle\TrackingBundle\Tracker\AbstractEcommerceTracker
         public: true
